# sandboxing-pocs

./: Cargo.toml
iris/: Cargo.toml
iris-integration-test/: Cargo.toml
iris-integration-test/src/: 01_spawn_worker.rs  02_forgetting_wait_panics_worker.rs  03_forgetting_lockdown_returns_error_worker.rs  05_get_exit_code_works_after_exit_worker.rs  05_opening_allowed_file_succeeds_worker.rs  06_get_exit_code_works_after_termination_worker.rs  07_opening_allowed_file_succeeds_worker.rs  08_opening_denied_file_fails_worker.rs  09_access_worker.rs  cannot_open_file_worker.rs
iris-integration-test/tests/: 01_spawn_broker.rs  02_forgetting_wait_panics_broker.rs  03_forgetting_lockdown_returns_error_broker.rs  04_execve_errors_propagate_broker.rs  05_get_exit_code_works_after_exit_broker.rs  05_opening_allowed_file_succeeds_broker.rs  06_get_exit_code_works_after_termination_broker.rs  06_opening_allowed_file_succeeds_broker.rs  07_opening_allowed_file_succeeds_broker.rs  08_opening_denied_file_fails_broker.rs  09_access_broker.rs  cannot_open_file_broker.rs  drop_privileges_broker.rs
iris-policy/: Cargo.toml
iris-policy/src/: lib.rs
iris/src/: .lib.rs.swp  broker_sock.rs  lib.rs  unix_sockets.rs
